# homecoming-build-companion

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  homecoming-build-companion.code-workspace  pyproject.toml
.claude/rules/: README.md  attack-slotting.md  build-creation.md  check-registry.md  coh-knowledge-navigation.md  devsecops.md  error-output.md  exemplar-10.md  gitops.md  hard-limits.md  io-set-naming.md  markdown.md  no-user-name.md  python.md
.github/: COMMIT_TEMPLATE  super-linter.env
.github/actions/report-status-context/: action.yml
.github/instructions/: devsecops_workflow.instructions.md
.github/linters/: .checkov.yaml  .jscpd.json
.github/workflows/: commitlint.yml  pre-commit.yml  pytest-coverage.yml  super-linter.yml
build-format/: schema.json
build-format/samples/: tw-bio-scrapper-max-damage-v1.md
community/: CAPTURE.md  CAPTURE_QUEUE.md  INDEX.md
community/archetypes/blaster/: energy-blast-energy-melee.md
community/archetypes/dominator/: dominator-benchmarks.md  rich-alt-guide-to-perma-dom.md
community/archetypes/scrapper/: jaegernault-guide-build-tw-bio.md  titan-weapon-bio-armor-guide.md
community/builds/: README.md
community/builds/blaster/: harlequin565-eb-em-2019.md  harlequin565-eb-em-2022.md
community/builds/defender/: frosticus-poison-fire.md
community/builds/scrapper/: beowulfinia-tw-bio.md  brasilgringo-tw-bio.md  mythozz-tw-bio.md
community/io-sets/: enhancements-and-how-to-make-them.md
community/leveling/: slotting-while-leveling-sovera.md
community/mechanics/: attuning-and-catalyzing.md  endurance-recovery-cheatsheet.md  enhancement-converters.md  galaxy-brain-resist-breakdown.md  health-and-regen-explained.md  heatstroke-end-management.md  hp-regen-proc-cheatsheet.md  incarnate-system-comprehensive.md  instant-improvements-io-cheat-sheet.md  nics-ios-with-impact.md  ppm-information-guide.md  pretty-damned-spectacular-io-guide.md  recharge-guide.md  respecs-multibuilds-unslotters.md  wavicle-what-really-matters.md
community/meta-builds/: farming-i28p1-microguide.md
community/powersets/: poison.md
community/tools/: survivability-tool.md
data/canonical/: all_power_search.json  at_power_search.json  attribute_names.json  boostset_groups.json  display_names.json  entity_names.json  index.json  manifest.json  powers_by_at.json  set_bonuses.json  set_conversions.json
data/canonical/archetypes/: arachnos_soldier.json  arachnos_widow.json  blaster.json  boss_archvillain.json  boss_archvillain_flying.json  boss_challengearchvillain.json  boss_elite.json  boss_eliteturret.json  boss_grunt.json  boss_guard.json  boss_hamidon.json  boss_heavypet.json  boss_henchman.json  boss_hugedevice.json  boss_knockablearchvillain.json  boss_knockablepraetorianarchvillain.json  boss_mito.json  boss_monster.json  boss_monster_flying.json  boss_monstrosity.json  boss_praetorianarchvillain.json  boss_praetorianavlowperception.json  boss_praetorianelite.json  boss_praetoriangrunt.json  boss_praetoriangrunt_pet.json  boss_reichsman.json  boss_rularuu.json  boss_rularuucop.json  boss_rularuufm.json  boss_shield.json  boss_signature_pets.json  boss_turret.json  brute.json  controller.json  corruptor.json  defender.json  dominator.json  henchman_boss.json  henchman_lt.json  henchman_minion.json  (+32 more)
data/canonical/boost_sets/: command_of_the_mastermind.json  index.json  mark_of_supremacy.json  superior_command_of_the_mastermind.json  superior_mark_of_supremacy.json
data/canonical/entities/: 5thcolumn_door.json  (+8944 more)
data/diff/: ESCALATION.md  SUMMARY.md  UNRESOLVED.md  current_overrides.json
docs/: archetypes.md  attack-chains.md  build-file-format.md  build-types-and-goals.md  ed-and-multipliers.md  enhancements-and-io-sets.md  incarnates.md  lessons-tw-bio-scrapper-v1-vs-experts.md  min-maxing.md  powers-and-effects.md  proc-strategy.md  procs.md  slotting-and-leveling.md
docs/_archive/: MERGE_PLAN-2026.md
docs/ci/: checks-parity-matrix.md  local-checks-validation-checklist.md
docs/engine/: mids-port-spec.md
docs/git/: heredoc-commit-messages.md
docs/repository-standards/: devsecops-workflow.md  git-branching.md  git-standards.md
inbox/: PROMPTS.md
inbox/.processed/: RechargeGuide.md
inbox/issues/: c-semicolon-dir-mystery.md  import-auto-labeler-workflow.md  import-dependabot-auto-merge-workflow.md  import-issue-priority-triage-workflow.md  import-labels-sync-workflow.md
samples/builds/: Elec - Psi Dominator.mbd  Hollowmind - Dominator (Darkness Control - Psionic Assault).mbd
scripts/: CAPTURE_WORKFLOW.md  capture.ps1  check-overrides.ps1  generate-prompts.ps1  index-builds.ps1  ingest-forum-capture.ps1  manifest.ps1  parse-patches.ps1  regen-index.ps1  update-queue-status.ps1
scripts/ci/: report_status_context.py  report_status_context.sh
scripts/common/: git_runner.py  git_signing_utils.py
scripts/dev/: Bootstrap-Venv.ps1  __init__.py  bootstrap_venv.py
scripts/devops/: calver.py  setup_git_signing.py
scripts/github/: cli_utils.py  conftest.py  create_tag.py  gh_cli.py
scripts/lane-a/: HARVEST.md
scripts/linting/: __init__.py  run_super_linter.py
src/coh_engine/: __init__.py  __main__.py  archetypes.py  at_names.py  attack_chain.py  attribmod.py  base_totals.py  diagnostics.py  ed.py  effect.py  enh_aspects.py  enh_pipeline.py  enhancement.py  exemplar.py  hard_limits.py  incarnate.py  legality.py  levels.py  maths.py  pass3.py  profiles.py  scoring.py  set_bonuses.py  statistics.py
strategy/: attack_chain_examples.json  breakpoints.json  build_profiles.json  set_bonus_stacking_rules.json
tools/: CAPTURE_WORKFLOW.md  __init__.py  check-overrides.ps1  diff-spotcheck.ps1  extract-docx.ps1  generate-prompts.ps1  ingest-forum-capture.ps1  queue-status.ps1
tools/_lib/: __init__.py  frontmatter.py
tools/dev/: Bootstrap-Venv.ps1  bootstrap_venv.py  bootstrap_venv.sh  check_git_signing.py
tools/lane-a/: HARVEST.md
tools/lane-b/: run.ps1
tools/mids-dump/: MidsDump.csproj  Program.cs  README.md
tools/oracle-dump/: OracleDump.csproj  Program.cs  README.md
(+29213 files in other folders)
