# homecoming-build-companion - Python configuration
# Python 3.14+ required

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homecoming-build-companion"
dynamic = ["version"]
description = "Claude project for designing City of Heroes (Homecoming) character builds against MidsReborn data"
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "types-PyYAML>=6.0.12",
]

[tool.setuptools.package-dir]
coh_engine = "src/coh_engine"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["scripts*", "coh_engine*"]
exclude = ["scripts.*.tests*", "scripts.*.fixtures*", "coh_engine.tests*"]

[tool.setuptools-scm]

[tool.coverage.run]
relative_files = true
branch = true
source = ["scripts", "src"]
omit = [
    "*/test_*.py",
    "*/tests/*",
    "*/conftest.py",
    "**/__main__.py",
]

[tool.coverage.paths]
source = [
    "scripts",
    "*/homecoming-build-companion/scripts",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 100

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "D",      # pydocstyle
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # Use ternary operator (readability preference)
    "D100",   # undocumented-public-module (phased rollout)
    "D101",   # undocumented-public-class (phased rollout)
    "D102",   # undocumented-public-method (phased rollout)
    "D103",   # undocumented-public-function (phased rollout)
    "D107",   # undocumented-public-init (phased rollout)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test_*.py" = ["D"]
"**/conftest.py" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "coh_engine"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
pythonpath = [".", "src"]
# Without testpaths, bare pytest walks the whole repo — including the huge
# harvested game-data trees (data/canonical/) and prose dirs.
testpaths = ["scripts", "src"]

[tool.pylint.main]
# Pylint disabled - ruff is the standard linter for this repository
ignore-patterns = [".*"]
